create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1332,6 +1332,52 @@ pre {
     -webkit-justify-content: center;
   }
 }
+.cid-qt17vZQtoz {
+  background-image: url("../../../assets/images/world-tour-1200x636.jpg");
+}
+.cid-qt19bFwlvD {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #efefef;
+}
+.cid-qt19bFwlvD .card-img a {
+  display: block;
+  padding-top: 2rem;
+}
+.cid-qt19bFwlvD .card-box {
+  padding: 0 2rem;
+}
+.cid-qt19bFwlvD .mbr-section-btn {
+  padding-top: 1rem;
+}
+.cid-qt19bFwlvD .mbr-section-btn a {
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
+.cid-qt19bFwlvD h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 2rem;
+}
+.cid-qt19bFwlvD p {
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 1.5rem;
+}
+.cid-qt19bFwlvD .mbr-text {
+  color: #767676;
+}
+.cid-qt19bFwlvD .card-wrapper {
+  padding-bottom: 2rem;
+  background: #ffffff;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-qt19bFwlvD .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
 .cid-qsE9dmQBNW .navbar {
   padding: .5rem 0;
   background: #149dcc;
@@ -1691,85 +1737,43 @@ pre {
     border-left: .30em solid transparent;
   }
 }
-.cid-qsE9doBf5G {
-  background-image: url("../../../assets/images/ritzbali-2000x1334.jpg");
-}
-.cid-qsIMXAKAlc {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #f9f9f9;
-}
-.cid-qsIMXAKAlc h2 {
-  text-align: center;
-}
-.cid-qsIMXAKAlc h4 {
-  text-align: center;
-  z-index: 1;
-  color: #ffffff;
-}
-.cid-qsIMXAKAlc p {
-  z-index: 1;
-  margin-bottom: 0;
-  color: #ffffff;
-}
-.cid-qsIMXAKAlc .media-container-row {
-  word-wrap: break-word;
-  word-break: break-word;
-  align-items: stretch;
-  -webkit-align-items: stretch;
-}
-.cid-qsIMXAKAlc .card-img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  overflow: hidden;
-}
-.cid-qsIMXAKAlc .card-img img {
-  z-index: -1;
-  min-height: 100%;
-  min-width: 100%;
-  width: auto;
-  max-width: 600px;
-}
-.cid-qsE9dpDfPx {
+.cid-qt1dxnbycf {
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: #2e2e2e;
 }
 @media (max-width: 767px) {
-  .cid-qsE9dpDfPx .content {
+  .cid-qt1dxnbycf .content {
     text-align: center;
   }
-  .cid-qsE9dpDfPx .content > div:not(:last-child) {
+  .cid-qt1dxnbycf .content > div:not(:last-child) {
     margin-bottom: 2rem;
   }
 }
 @media (max-width: 767px) {
-  .cid-qsE9dpDfPx .media-wrap {
+  .cid-qt1dxnbycf .media-wrap {
     margin-bottom: 1rem;
   }
 }
-.cid-qsE9dpDfPx .media-wrap .mbr-iconfont-logo {
+.cid-qt1dxnbycf .media-wrap .mbr-iconfont-logo {
   font-size: 7.5rem;
   color: #f36;
 }
-.cid-qsE9dpDfPx .media-wrap img {
+.cid-qt1dxnbycf .media-wrap img {
   height: 6rem;
 }
 @media (max-width: 767px) {
-  .cid-qsE9dpDfPx .footer-lower .copyright {
+  .cid-qt1dxnbycf .footer-lower .copyright {
     margin-bottom: 1rem;
     text-align: center;
   }
 }
-.cid-qsE9dpDfPx .footer-lower hr {
+.cid-qt1dxnbycf .footer-lower hr {
   margin: 1rem 0;
   border-color: #fff;
   opacity: .05;
 }
-.cid-qsE9dpDfPx .footer-lower .social-list {
+.cid-qt1dxnbycf .footer-lower .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
@@ -1778,24 +1782,24 @@ pre {
   justify-content: flex-end;
   -webkit-justify-content: flex-end;
 }
-.cid-qsE9dpDfPx .footer-lower .social-list .mbr-iconfont-social {
+.cid-qt1dxnbycf .footer-lower .social-list .mbr-iconfont-social {
   font-size: 1.3rem;
   color: #fff;
 }
-.cid-qsE9dpDfPx .footer-lower .social-list .soc-item {
+.cid-qt1dxnbycf .footer-lower .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-qsE9dpDfPx .footer-lower .social-list a {
+.cid-qt1dxnbycf .footer-lower .social-list a {
   margin: 0;
   opacity: .5;
   -webkit-transition: .2s linear;
   transition: .2s linear;
 }
-.cid-qsE9dpDfPx .footer-lower .social-list a:hover {
+.cid-qt1dxnbycf .footer-lower .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-qsE9dpDfPx .footer-lower .social-list {
+  .cid-qt1dxnbycf .footer-lower .social-list {
     justify-content: center;
     -webkit-justify-content: center;
   }
