create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4719,7 +4719,7 @@ pre {
   color: #232323;
 }
 .cid-qt69naYMOm {
-  padding-top: 0px;
+  padding-top: 15px;
   padding-bottom: 0px;
   background-color: #f9f9f9;
 }
@@ -4802,6 +4802,29 @@ pre {
 }
 .cid-qt69naYMOm .body-item {
   color: #ffffff;
+}
+.cid-qtoucE0VWW {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-qtoucE0VWW .line {
+  background-color: #149dcc;
+  color: #149dcc;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-qtoucE0VWW .section-text {
+  padding: 2rem 0;
+}
+.cid-qtoucE0VWW .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-qtoucE0VWW .inner-container {
+    width: 100% !important;
+  }
 }
 .cid-qtbjbXzqr4 {
   padding-top: 15px;
@@ -8360,6 +8383,50 @@ pre {
 .cid-qtbkzvknok .mbr-text,
 .cid-qtbkzvknok blockquote {
   color: #767676;
+}
+.cid-qtozbjKz5X {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-qtozbjKz5X .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-qtovno2zYI {
+  padding-top: 15px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-qtovno2zYI .counter-container {
+  color: #767676;
+}
+.cid-qtovno2zYI .counter-container ul {
+  margin-bottom: 0;
+}
+.cid-qtovno2zYI .counter-container ul li {
+  margin-bottom: 1rem;
+  list-style: none;
+}
+.cid-qtovno2zYI .counter-container ul li:before {
+  position: absolute;
+  left: 0px;
+  margin-top: -10px;
+  padding-top: 3px;
+  content: '';
+  display: inline-block;
+  text-align: center;
+  margin: 5px 10px;
+  line-height: 20px;
+  transition: all .2s;
+  color: #ffffff;
+  background: #149dcc;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: none;
+  border: 1px solid #149dcc;
+  color: #149dcc;
+  content: '✓';
 }
 .cid-qtbjiqQd3J {
   padding-top: 15px;
